--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-/source/main
-/source/.vscode
-/source/.medatada.db
+/build/
+/CMakeFiles/
+/CMakeCache.txt
+/cmake_install.cmake
+/Makefile
+/.metadata.db
+/.vscode
+
 
