Refactored into cleaner and more readable code separeted scanning logic from the multithreading one

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,14 +33,26 @@ add_library(dbmanager
     src/db_manager.cpp
 )
 target_link_libraries(dbmanager PRIVATE SQLite::SQLite3)
-target_link_libraries(dbmanager PUBLIC hasher)
 target_include_directories(dbmanager PUBLIC ${CMAKE_SOURCE_DIR}/include)
 
+#worker_pool
+add_library(workerpool
+    src/worker_pool.cpp
+)
+target_include_directories(workerpool PUBLIC ${CMAKE_SOURCE_DIR}/include)
+
+
+# file_processor
+add_library(fileprocessor
+    src/file_processor.cpp
+)
+target_link_libraries(fileprocessor PRIVATE dbmanager PRIVATE hasher PRIVATE workerpool)
+target_include_directories(fileprocessor PUBLIC ${CMAKE_SOURCE_DIR}/include)
 # Versioneer depends on DBManager
 add_library(versioneer
     src/versioneer.cpp
 )
-target_link_libraries(versioneer PRIVATE dbmanager PUBLIC hasher)
+target_link_libraries(versioneer PRIVATE dbmanager PUBLIC hasher PRIVATE fileprocessor)
 target_include_directories(versioneer PUBLIC ${CMAKE_SOURCE_DIR}/include)
 
 # Main executable
